instagram and strava updates from 2017-12-10

--- a/instagram14.html
+++ b/instagram14.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000839.jpg" title="🚲🌵🗻 #bicycle #cycling #palmdesert #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>🚲🌵🗻 #bicycle #cycling #palmdesert #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000839.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000837.jpg" title="Good thing I brought my cross bike. #barriers #cyclocross #palmdesert #ridecannondale #bicycle #superX #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Good thing I brought my cross bike. #barriers #cyclocross #palmdesert #ridecannondale #bicycle #superX #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000837.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000838.jpg" title="Sunrise Desert ride. 🌵🚲 #cycling #bicycle #palmdesert #superX #ridecannondale #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise Desert ride. 🌵🚲 #cycling #bicycle #palmdesert #superX #ridecannondale #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000838.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000835.jpg" title="Goals this week: ride A LOT...Play with the kids in the pool A LOT and try really really hard not to burn my skin into a red screaming sheet of agony. #cycling #bicycle #palmdesert #LovestarRaceClub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Goals this week: ride A LOT...Play with the kids in the pool A LOT and try really really hard not to burn my skin into a red screaming sheet of agony. #cycling #bicycle #palmdesert #LovestarRaceClub</small>
+                           </div>
+                           <img src="../lsphotos/image000835.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000836.jpg" title="Desert Riding! 🚲🔥 Airline finally delivered my bike 👍 got everything built with enough time to do a hour long shake down ride to make sure everything was working well. Big thanks to @quickityjacks for some local beta on where to start riding. Can't wait to spend a week riding in short sleeve kit again. #palmdesert #cycling #bicycle #superX #ridecannondale #LovestarRaceClub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -209,58 +261,6 @@
 #lovestarraceclub #bikewinter #cycling #bicycle</small>
                            </div>
                            <img src="../lsphotos/image000820.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000821.jpg" title="Frozen coffee ride today...#lovestarraceclub #supersix #zippspeed #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Frozen coffee ride today...#lovestarraceclub #supersix #zippspeed #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000821.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000818.jpg" title="Cold sunrise Solo. #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold sunrise Solo. #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000818.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000817.jpg" title="Cool picture from @agonz21 this morning! #bicycle #cycling #bikewinter #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cool picture from @agonz21 this morning! #bicycle #cycling #bikewinter #fatbike #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000817.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000815.jpg" title="Cold grey sunrise ride. #cycling #bicycle #bikewinter #fatbike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Cold grey sunrise ride. #cycling #bicycle #bikewinter #fatbike #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000815.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
