--- a/instagram17.html
+++ b/instagram17.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000779.jpg" title="#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho</small>
+                           </div>
+                           <img src="../lsphotos/image000779.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000782.jpg" title="Skokio drift #snow #mtb #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Skokio drift #snow #mtb #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000782.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000778.jpg" title="Snow biking through fresh powder is a great way to start your day. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Snow biking through fresh powder is a great way to start your day. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000778.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000775.jpg" title="Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000775.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000774.jpg" title="Fresh dusting of snow. Definitely time to put on the studded tires. #fatbike #cycling #bicycle #snowbike #bikepacking #LovestarBicycleBags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Birthday bike needs a custom color-matched #LovestarBicycleBags seat bag. #handmade #bicycle #cycling #dadlife #clearybikes</small>
                            </div>
                            <img src="../lsphotos/image000758.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000001.jpg" title="Cold #squad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Cold #squad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000001.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000005.jpg" title="Cold morning... hot coffee. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Cold morning... hot coffee. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000005.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000011.jpg" title="Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride...probably one of the last really nice days this season. Makin' the most of it. #bikechi #cycling #ridecannondale #bicycle #cyclocross #cx #LoveStarRaceClub</small>
-                           </div>
-                           <img src="../lsphotos/image000011.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000003.jpg" title="Today's off to a good start. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Today's off to a good start. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000003.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
