--- a/instagram2.html
+++ b/instagram2.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001079.jpg" title="Racing this little man home after dropping his sisters off at school is quickly becoming one of my favorite parts of the day. ❤️ #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Racing this little man home after dropping his sisters off at school is quickly becoming one of my favorite parts of the day. ❤️ #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image001079.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001078.jpg" title="Custom #bikepacking bag setup number 2 out of 3 completed today. This is the 2nd of 3 sets of custom #lovestarbicyclebags that will be heading to the #Tuscobia80 this winter." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #bikepacking bag setup number 2 out of 3 completed today. This is the 2nd of 3 sets of custom #lovestarbicyclebags that will be heading to the #Tuscobia80 this winter.</small>
+                           </div>
+                           <img src="../lsphotos/image001078.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001077.jpg" title="Exploring. #fatbike #adventurebike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Exploring. #fatbike #adventurebike</small>
+                           </div>
+                           <img src="../lsphotos/image001077.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001076.jpg" title="Finally nabbed my first #chicrosscup podium today! The best part? I got to share it with my teammate and friend, @robert.gordon19 for a 1-2 Lovestar podium!!! #lovestarraceclub #podium #teammates" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Finally nabbed my first #chicrosscup podium today! The best part? I got to share it with my teammate and friend, @robert.gordon19 for a 1-2 Lovestar podium!!! #lovestarraceclub #podium #teammates</small>
+                           </div>
+                           <img src="../lsphotos/image001076.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001075.jpg" title="Cold, Fat & Windy Fall Color Ride #fatbike" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>DPRT in the Fall is hard to beat. #fatbike</small>
                            </div>
                            <img src="../lsphotos/image001060.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001058.jpg" title="Action pic of #lovestarraceclub on the DPRT this morning. Turned out to be a beautiful day for it!" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Action pic of #lovestarraceclub on the DPRT this morning. Turned out to be a beautiful day for it!</small>
-                           </div>
-                           <img src="../lsphotos/image001058.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001059.jpg" title="Pumpkin donuts and pumpkin helmets. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Pumpkin donuts and pumpkin helmets. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image001059.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001056.jpg" title="🦌 🦌 🚲 #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>🦌 🦌 🚲 #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image001056.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001057.jpg" title="Serious Walking dead vibes with these underpasses... #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Serious Walking dead vibes with these underpasses... #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image001057.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
