--- a/instagram3.html
+++ b/instagram3.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001058.jpg" title="Action pic of #lovestarraceclub on the DPRT this morning. Turned out to be a beautiful day for it!" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>Action pic of #lovestarraceclub on the DPRT this morning. Turned out to be a beautiful day for it!</small>
+                           </div>
+                           <img src="../lsphotos/image001058.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001059.jpg" title="Pumpkin donuts and pumpkin helmets. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Pumpkin donuts and pumpkin helmets. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image001059.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001056.jpg" title="🦌 🦌 🚲 #adventurebike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>🦌 🦌 🚲 #adventurebike</small>
+                           </div>
+                           <img src="../lsphotos/image001056.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001057.jpg" title="Serious Walking dead vibes with these underpasses... #adventurebike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Serious Walking dead vibes with these underpasses... #adventurebike</small>
+                           </div>
+                           <img src="../lsphotos/image001057.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001054.jpg" title="Another great day of racing in #chicrosscup ! It was dry, hot, and dusty but I always enjoy racing at Hopkins Park. #hopkinscx #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -207,58 +259,6 @@
                               <small>Dad obviously made this ramp too easy... #babySNUB looking bored doing some ramp riding after her first day of preschool. 😴#lilshredder</small>
                            </div>
                            <img src="../lsphotos/image001041.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001040.jpg" title="Tactical elegance. Stripped off most of the decals and stickers. Let the craftsmanship speak for itself, understated yet still catching to the discerning eye. I'm Almost done dialing my #cyclocross steed for this season. I am going to be racing a very abridged calendar this fall as I prepare for the #Tuscobia80 and as our family settles into the craziness of our first year of school for the girls. Here's to another great #chicrosscup season! #moots" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Tactical elegance. Stripped off most of the decals and stickers. Let the craftsmanship speak for itself, understated yet still catching to the discerning eye. I'm Almost done dialing my #cyclocross steed for this season. I am going to be racing a very abridged calendar this fall as I prepare for the #Tuscobia80 and as our family settles into the craziness of our first year of school for the girls. Here's to another great #chicrosscup season! #moots</small>
-                           </div>
-                           <img src="../lsphotos/image001040.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001037.jpg" title="First #chicagocrosscup 2017 races are in the books! What a great day - did my best to put a hurt on my competition out there...#lovestarraceclub #caldwellwoods" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>First #chicagocrosscup 2017 races are in the books! What a great day - did my best to put a hurt on my competition out there...#lovestarraceclub #caldwellwoods</small>
-                           </div>
-                           <img src="../lsphotos/image001037.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001038.jpg" title="Strategizing his lines for the cross race #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Strategizing his lines for the cross race #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image001038.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001036.jpg" title="Fat tire gravel grinding this AM. #fatbike 📷 @mrchanzalez" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat tire gravel grinding this AM. #fatbike 📷 @mrchanzalez</small>
-                           </div>
-                           <img src="../lsphotos/image001036.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
