--- a/instagram37.html
+++ b/instagram37.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000247.jpg" title="Daddy / Daughter bike ride & swing adventures. #fatbike #cycling #futurecyclist #striderbike #lovestarbicyclebags #bikepacking #babysnub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Daddy / Daughter bike ride & swing adventures. #fatbike #cycling #futurecyclist #striderbike #lovestarbicyclebags #bikepacking #babysnub</small>
+                           </div>
+                           <img src="../lsphotos/image000247.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000681.jpg" title="Took the road whip out today. But the day was so beautiful, I found myself coasting on the downhills, stopping to take pictures, exploring detours, and just soaking in the gorgeousness of fall. Sometimes it's best to skip a training day. #cycling #cylist #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Took the road whip out today. But the day was so beautiful, I found myself coasting on the downhills, stopping to take pictures, exploring detours, and just soaking in the gorgeousness of fall. Sometimes it's best to skip a training day. #cycling #cylist #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000681.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000682.jpg" title="Fall. #cycling #cylist #lovestarfactoryteam #bmc" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fall. #cycling #cylist #lovestarfactoryteam #bmc</small>
+                           </div>
+                           <img src="../lsphotos/image000682.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000087.jpg" title="One more... #lovestarbicyclebags #bikepacking #cycling #handmade #sewrad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>One more... #lovestarbicyclebags #bikepacking #cycling #handmade #sewrad</small>
+                           </div>
+                           <img src="../lsphotos/image000087.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000248.jpg" title="Still working on this prototype feed bag...but I'm getting so stoked about it, I had to share an in-progress shot. #lovestarbicyclebags #handmade #bikepacking #cycling #fatbike #sewrad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>#lovestarfactoryteam Hasselhoff ride. Mornings are getting darker...sigh. #cycling #bicycle #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000692.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000254.jpg" title="Bridge crossing at dusk on my commute home tonight. #fatbike #bikepacking #bikecommute #framebag #lovestarbicyclebags #cycling #cyclist #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Bridge crossing at dusk on my commute home tonight. #fatbike #bikepacking #bikecommute #framebag #lovestarbicyclebags #cycling #cyclist #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000254.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000537.jpg" title="@casadewaggoner double hitting the 4 and the 4/5s races. #lovestarfactoryteam #chicagocrosscup #caldwellcx #cyclocross #cx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>@casadewaggoner double hitting the 4 and the 4/5s races. #lovestarfactoryteam #chicagocrosscup #caldwellcx #cyclocross #cx</small>
-                           </div>
-                           <img src="../lsphotos/image000537.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000693.jpg" title="#lovestarfactoryteam kicking off the #chicagocrosscup at the relocated #caldwellcx race today! #cyclocross #cx #cycling #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#lovestarfactoryteam kicking off the #chicagocrosscup at the relocated #caldwellcx race today! #cyclocross #cx #cycling #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000693.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000255.jpg" title="Commuting on a sunny Saturday afternoon on one of the areas most popular bike trails has to be as close as it comes to a Cat 6 world championships. #bikecommute #fatbike #bikepacking #bicyclebag #framebag #lovestarbicyclebags #handmade #bikechi #cycling #cat6" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Commuting on a sunny Saturday afternoon on one of the areas most popular bike trails has to be as close as it comes to a Cat 6 world championships. #bikecommute #fatbike #bikepacking #bicyclebag #framebag #lovestarbicyclebags #handmade #bikechi #cycling #cat6</small>
-                           </div>
-                           <img src="../lsphotos/image000255.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
