--- a/instagram40.html
+++ b/instagram40.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000711.jpg" title="Sunset Ride was a much needed mental and emotional break after the chaos of moving this past weekend. Living with two kids out of cardboard boxes in a new space required some serious big ring therapy. #cycling #cyclist #moots #psychloX #bikechi #lovestarfactoryteam #bicycle #sunset #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset Ride was a much needed mental and emotional break after the chaos of moving this past weekend. Living with two kids out of cardboard boxes in a new space required some serious big ring therapy. #cycling #cyclist #moots #psychloX #bikechi #lovestarfactoryteam #bicycle #sunset #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image000711.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000712.jpg" title="Great shot by @theandyhudson from the #lovestarfactoryteam ride this morning. Good miles with great people." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Great shot by @theandyhudson from the #lovestarfactoryteam ride this morning. Good miles with great people.</small>
+                           </div>
+                           <img src="../lsphotos/image000712.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000713.jpg" title="Moon's out... #cycling #moot #psychloX #bicycle #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Moon's out... #cycling #moot #psychloX #bicycle #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000713.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000274.jpg" title="Recalling every #zombie movie ever... #fatbike #adventurebike #bikechi #bikepacking #lovestarbicyclebags #cycling #bicycle #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Recalling every #zombie movie ever... #fatbike #adventurebike #bikechi #bikepacking #lovestarbicyclebags #cycling #bicycle #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000274.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000275.jpg" title="Not too bad for a morning commute... #fatbike #cycling #bikechi #bikecommute #bikepacking #bicyclebag #framebag #gravelgrinder #lovestarbicyclebags" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -211,58 +263,6 @@ Another shot from my ride home tonight... #lovestarbicyclebags #fatbike #cycling
                               <small>#cycling #ladiesoflovestar #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000718.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000719.jpg" title="Big mountain riding. #babysnub #babyGnar #lovestarfactoryteam #cyclist #futurecyclist #littleshredder #bigsky #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Big mountain riding. #babysnub #babyGnar #lovestarfactoryteam #cyclist #futurecyclist #littleshredder #bigsky #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000719.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000720.jpg" title="Some of these roads...by themselves, are worth the trip to #bigsky #lovestarfactoryteam #cycling #cyclist" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Some of these roads...by themselves, are worth the trip to #bigsky #lovestarfactoryteam #cycling #cyclist</small>
-                           </div>
-                           <img src="../lsphotos/image000720.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000721.jpg" title="Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Road bikes off road. #bigsky #moots #psychloX #cycling #cyclist #gravelgrinder #gravel #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000721.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000722.jpg" title="Morning climb... #cycling #cyclist #moots #psychloX #lovestarfactoryteam #bigsky #" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Morning climb... #cycling #cyclist #moots #psychloX #lovestarfactoryteam #bigsky #</small>
-                           </div>
-                           <img src="../lsphotos/image000722.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
