--- a/instagram50.html
+++ b/instagram50.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000428.jpg" title="I have to admit, the DPR Trail in the fall is pretty hard to beat. #chicago #bikechi #cyclocross #cx #gravel #gravelgrinder #moots #lovestarbicycles #lovestarbicyclebags #dprt #desplainsrivertrail" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>I have to admit, the DPR Trail in the fall is pretty hard to beat. #chicago #bikechi #cyclocross #cx #gravel #gravelgrinder #moots #lovestarbicycles #lovestarbicyclebags #dprt #desplainsrivertrail</small>
+                           </div>
+                           <img src="../lsphotos/image000428.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000429.jpg" title="Sampling some fine double track in the North suburbs of #chicago it's amazing what you can find If you know where to look. #cyclocross #gravel #gravelgrinder #cx #bikechi #lovestarbicycles #lovestarbicyclebags #lazersport #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sampling some fine double track in the North suburbs of #chicago it's amazing what you can find If you know where to look. #cyclocross #gravel #gravelgrinder #cx #bikechi #lovestarbicycles #lovestarbicyclebags #lazersport #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000429.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000430.jpg" title="Helping Daddy back to the staging area : ). #elliotlovestar  #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #cyclocross #bestpitcrew #bikeracing #bestdadever #bikechicago #bikechi #cantwaitforatwowheeler" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Helping Daddy back to the staging area : ). #elliotlovestar  #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrosschicago #cyclocross #bestpitcrew #bikeracing #bestdadever #bikechicago #bikechi #cantwaitforatwowheeler</small>
+                           </div>
+                           <img src="../lsphotos/image000430.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000431.jpg" title="Lovestar Factory Team today at Caldwell Woods for the start of the Chicago Cross Cup season. Ride tote race and then had a great time killing it on the course. #chicagoCX #bikechi #cyclocross #cycling #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team today at Caldwell Woods for the start of the Chicago Cross Cup season. Ride tote race and then had a great time killing it on the course. #chicagoCX #bikechi #cyclocross #cycling #lovestarbicycles #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000431.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000432.jpg" title="Grassy hill repeats & barrier practice for tonight's ride. #cyclocross #cycling #moots #psychloX #barriers #lovestarbicycles #lovestarbicyclebags #bikechi #bicycle" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Custom Lovestar SaddlePack in the works. These colors are just so good. #gnarfest #handmade #lovestarbicycles #cycling #bikechi #madeinchicago #bikebag #lovestarbicyclebags #bikepacking</small>
                            </div>
                            <img src="../lsphotos/image000447.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000448.jpg" title="Got my new saddle bag for my ride. Shout out Lovestar Bicycle Bags. #saddlebag #LovestarBicycleBags #elliotlovestarbicycles #salsaVaya2 #PimpMyRide" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>aleaders</h4>
-                              <small>Got my new saddle bag for my ride. Shout out Lovestar Bicycle Bags. #saddlebag #LovestarBicycleBags #elliotlovestarbicycles #salsaVaya2 #PimpMyRide</small>
-                           </div>
-                           <img src="../lsphotos/image000448.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000449.jpg" title="Homemade barriers. Time to start practicin' #cx2014 #cx #cyclocross #cycling #crossishere #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Homemade barriers. Time to start practicin' #cx2014 #cx #cyclocross #cycling #crossishere #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000449.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000450.jpg" title="Lovestar Factory Team racing Chicago today. Loved the new pit crew! #cyclocross #cycling  #chicagocycling #lovestarfactoryteam #lovestarbicyclebags #elliotlovestar #bikechi #bikeracing" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Lovestar Factory Team racing Chicago today. Loved the new pit crew! #cyclocross #cycling  #chicagocycling #lovestarfactoryteam #lovestarbicyclebags #elliotlovestar #bikechi #bikeracing</small>
-                           </div>
-                           <img src="../lsphotos/image000450.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000451.jpg" title="Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000451.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
