--- a/index.html
+++ b/index.html
@@ -173,6 +173,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001116.jpg" title="First Snow ride for #babySNUB 🚲❄️" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First Snow ride for #babySNUB 🚲❄️</small>
+                           </div>
+                           <img src="../lsphotos/image001116.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001119.jpg" title="Early morning #tuscobiaultra training miles with @elliotlovestarbicycles and @mrchanzalez. Complete with the first snow of the season! #lovestarraceclub #tuscobiatraining #fatbike #winterbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Early morning #tuscobiaultra training miles with @elliotlovestarbicycles and @mrchanzalez. Complete with the first snow of the season! #lovestarraceclub #tuscobiatraining #fatbike #winterbike</small>
+                           </div>
+                           <img src="../lsphotos/image001119.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001117.jpg" title="Custom #lovestarbicyclebags bikepacking setups rolling 3 deep this morning. #fatbike" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #lovestarbicyclebags bikepacking setups rolling 3 deep this morning. #fatbike</small>
+                           </div>
+                           <img src="../lsphotos/image001117.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001118.jpg" title="Snow Day! #Tuscobia80" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Snow Day! #Tuscobia80</small>
+                           </div>
+                           <img src="../lsphotos/image001118.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001115.jpg" title="A little late, but here’s some pics from #montrosecx. What a great closing event to an amazing season. #lovestarraceclub #cyclocross" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -382,58 +434,6 @@
                               <small>Happy 5th Birthday Stella! Love you beyond measure. ❤️ #dadlife</small>
                            </div>
                            <img src="../lsphotos/image001100.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001099.jpg" title="🚵🏽‍♀️#babySNUB" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>🚵🏽‍♀️#babySNUB</small>
-                           </div>
-                           <img src="../lsphotos/image001099.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001098.jpg" title="Turkey Day single track and pump tracks! #cranksgiving" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Turkey Day single track and pump tracks! #cranksgiving</small>
-                           </div>
-                           <img src="../lsphotos/image001098.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001097.jpg" title="It was a bit muddy and cold out there today. The mud actually froze to my bike. #lovestarraceclub #wheelingcx" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>It was a bit muddy and cold out there today. The mud actually froze to my bike. #lovestarraceclub #wheelingcx</small>
-                           </div>
-                           <img src="../lsphotos/image001097.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001095.jpg" title="Surprise!!! Happy Birthday Sweet Grandaughter 😘💕 Daddy built her a new fat bike complete with his trademark @elliotlovestarbicycles custom pogies and frame bag!!! So so so awesome!!! #adorablegrandaughter #cycling #juniorcyclist #elliotlovestarbicycles #lovestarbicyclebags #pogies #custompogies #cycling #theponyshop #birthdaysurprise #happy5thbirthday #cyclocross #wintercycling #fearless #adventuredad #adventurekid #sohappy  #ilovethislittlegirlbeyondmeasure" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Surprise!!! Happy Birthday Sweet Grandaughter 😘💕 Daddy built her a new fat bike complete with his trademark @elliotlovestarbicycles custom pogies and frame bag!!! So so so awesome!!! #adorablegrandaughter #cycling #juniorcyclist #elliotlovestarbicycles #lovestarbicyclebags #pogies #custompogies #cycling #theponyshop #birthdaysurprise #happy5thbirthday #cyclocross #wintercycling #fearless #adventuredad #adventurekid #sohappy  #ilovethislittlegirlbeyondmeasure</small>
-                           </div>
-                           <img src="../lsphotos/image001095.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
