--- a/instagram1.html
+++ b/instagram1.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001099.jpg" title="🚵🏽‍♀️#babySNUB" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>🚵🏽‍♀️#babySNUB</small>
+                           </div>
+                           <img src="../lsphotos/image001099.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001098.jpg" title="Turkey Day single track and pump tracks! #cranksgiving" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Turkey Day single track and pump tracks! #cranksgiving</small>
+                           </div>
+                           <img src="../lsphotos/image001098.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001097.jpg" title="It was a bit muddy and cold out there today. The mud actually froze to my bike. #lovestarraceclub #wheelingcx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>It was a bit muddy and cold out there today. The mud actually froze to my bike. #lovestarraceclub #wheelingcx</small>
+                           </div>
+                           <img src="../lsphotos/image001097.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001095.jpg" title="Surprise!!! Happy Birthday Sweet Grandaughter 😘💕 Daddy built her a new fat bike complete with his trademark @elliotlovestarbicycles custom pogies and frame bag!!! So so so awesome!!! #adorablegrandaughter #cycling #juniorcyclist #elliotlovestarbicycles #lovestarbicyclebags #pogies #custompogies #cycling #theponyshop #birthdaysurprise #happy5thbirthday #cyclocross #wintercycling #fearless #adventuredad #adventurekid #sohappy  #ilovethislittlegirlbeyondmeasure" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Surprise!!! Happy Birthday Sweet Grandaughter 😘💕 Daddy built her a new fat bike complete with his trademark @elliotlovestarbicycles custom pogies and frame bag!!! So so so awesome!!! #adorablegrandaughter #cycling #juniorcyclist #elliotlovestarbicycles #lovestarbicyclebags #pogies #custompogies #cycling #theponyshop #birthdaysurprise #happy5thbirthday #cyclocross #wintercycling #fearless #adventuredad #adventurekid #sohappy  #ilovethislittlegirlbeyondmeasure</small>
+                           </div>
+                           <img src="../lsphotos/image001095.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001094.jpg" title="New Bike Day!" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>#Tuscobia80 bikepacking bag set number 3 is on the sewing table. #snowcamo & contrast stitching ❄️🚲</small>
                            </div>
                            <img src="../lsphotos/image001080.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001079.jpg" title="Racing this little man home after dropping his sisters off at school is quickly becoming one of my favorite parts of the day. ❤️ #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Racing this little man home after dropping his sisters off at school is quickly becoming one of my favorite parts of the day. ❤️ #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image001079.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001078.jpg" title="Custom #bikepacking bag setup number 2 out of 3 completed today. This is the 2nd of 3 sets of custom #lovestarbicyclebags that will be heading to the #Tuscobia80 this winter." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Custom #bikepacking bag setup number 2 out of 3 completed today. This is the 2nd of 3 sets of custom #lovestarbicyclebags that will be heading to the #Tuscobia80 this winter.</small>
-                           </div>
-                           <img src="../lsphotos/image001078.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001077.jpg" title="Exploring. #fatbike #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Exploring. #fatbike #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image001077.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001076.jpg" title="Finally nabbed my first #chicrosscup podium today! The best part? I got to share it with my teammate and friend, @robert.gordon19 for a 1-2 Lovestar podium!!! #lovestarraceclub #podium #teammates" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Finally nabbed my first #chicrosscup podium today! The best part? I got to share it with my teammate and friend, @robert.gordon19 for a 1-2 Lovestar podium!!! #lovestarraceclub #podium #teammates</small>
-                           </div>
-                           <img src="../lsphotos/image001076.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
