--- a/instagram10.html
+++ b/instagram10.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000919.jpg" title="Itty bitty singletrack. #lilshredder #cycling #bicycle #mtb #kidsonbikes #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Itty bitty singletrack. #lilshredder #cycling #bicycle #mtb #kidsonbikes #bikechi #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000919.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000918.jpg" title="Custom #lovestarbicyclebags Saddlepack shipping out tomorrow. #handmade #cycling #bicycle #bicyclebag #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom #lovestarbicyclebags Saddlepack shipping out tomorrow. #handmade #cycling #bicycle #bicyclebag #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000918.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000917.jpg" title="Shadows on the trail...a long and lonely training ride had me staring at my shadow a lot this morning. #lovestarraceclub #desplainesrivertrail" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Shadows on the trail...a long and lonely training ride had me staring at my shadow a lot this morning. #lovestarraceclub #desplainesrivertrail</small>
+                           </div>
+                           <img src="../lsphotos/image000917.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000916.jpg" title="Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fatbike smiles 👍😁😁 #adventuredad #fatbike #cycling #bicycle #bikechi #kidsonbikes #lilshredder #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000916.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000915.jpg" title="Father/Son night out. Swimming, bikes & chicken nuggets #dadlife #bicycle #cycling #fatbike #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Rolling with the early crew today #lovestarraceclub #twinsies🕺🏼🕺🏼</small>
                            </div>
                            <img src="../lsphotos/image000899.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000900.jpg" title="Mini #arenberg sunrise ride. #cycling #bicycle #roubaix #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Mini #arenberg sunrise ride. #cycling #bicycle #roubaix #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000900.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000898.jpg" title="Great day for a leisurely ride with the #lovestarraceclub crew. Happy Birthday Ben!" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>clintsievers</h4>
-                              <small>Great day for a leisurely ride with the #lovestarraceclub crew. Happy Birthday Ben!</small>
-                           </div>
-                           <img src="../lsphotos/image000898.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000897.jpg" title="Spring finally starting to peek out. #bikechi #cycling #bicycle #ridecannondale #cyclocross #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Spring finally starting to peek out. #bikechi #cycling #bicycle #ridecannondale #cyclocross #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000897.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000896.jpg" title="Matching the landscape... #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Matching the landscape... #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000896.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
