--- a/instagram15.html
+++ b/instagram15.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000821.jpg" title="Frozen coffee ride today...#lovestarraceclub #supersix #zippspeed #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Frozen coffee ride today...#lovestarraceclub #supersix #zippspeed #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000821.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000818.jpg" title="Cold sunrise Solo. #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold sunrise Solo. #fatbike #bikewinter #cycling #bicycle #bikepacking #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000818.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000817.jpg" title="Cool picture from @agonz21 this morning! #bicycle #cycling #bikewinter #fatbike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cool picture from @agonz21 this morning! #bicycle #cycling #bikewinter #fatbike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000817.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000815.jpg" title="Cold grey sunrise ride. #cycling #bicycle #bikewinter #fatbike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold grey sunrise ride. #cycling #bicycle #bikewinter #fatbike #bikepacking #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000815.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000816.jpg" title="It's a bird, it's a train, no, it's @elliotlovestarbicycles #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>agonz21</h4>
@@ -207,58 +259,6 @@
                               <small>"In the midst of winter, I found there was, within me, an invincible summer." #lovestarraceclub #cycling</small>
                            </div>
                            <img src="../lsphotos/image000800.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000799.jpg" title="Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000799.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000797.jpg" title="#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017." rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017.</small>
-                           </div>
-                           <img src="../lsphotos/image000797.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000798.jpg" title="Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000798.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000796.jpg" title="Riding on ice in the dark, finished my ride just as the sun was coming up. #festive500 #cycling #fatbike #bikepacking #bicycle #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Riding on ice in the dark, finished my ride just as the sun was coming up. #festive500 #cycling #fatbike #bikepacking #bicycle #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000796.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
