--- a/instagram16.html
+++ b/instagram16.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000799.jpg" title="Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Daddy / Daughter New Years night ride. #cycling #bicycle #pogies #nightride #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000799.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000797.jpg" title="#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017." rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>#best9of2016 It was a good year for bikes. #babySNUB mastering pedals... #babyARC riding in his first #cyclocross race... epic trip to Mt. Hood...lots of closer-to-home adventures with the kids...thousands of miles with my #lovestarfactoryteam friends. Gravel, snow, ice, heat and more. I had some great victories on the bike and some crushing defeats. Can't wait for 2017.</small>
+                           </div>
+                           <img src="../lsphotos/image000797.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000798.jpg" title="Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Final ride of 2016 🚲 #festive500 #lovestarfactoryteam #cycling #bicycle #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000798.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000796.jpg" title="Riding on ice in the dark, finished my ride just as the sun was coming up. #festive500 #cycling #fatbike #bikepacking #bicycle #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Riding on ice in the dark, finished my ride just as the sun was coming up. #festive500 #cycling #fatbike #bikepacking #bicycle #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000796.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000795.jpg" title="With the unusually mild weather today the roads dried up so I took the new whip for an outdoor spin this afternoon. A few tweaks to the fit and she'll be ready to crush gravel this spring! Thanks again @ponylou ! #lovestarraceclub #superx #forcecx1" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>ddave12000</h4>
@@ -207,58 +259,6 @@
                               <small>Fatbike group ride! #cycling #bicycle #fatbike #LovestarRaceClub</small>
                            </div>
                            <img src="../lsphotos/image000780.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000779.jpg" title="#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>#lovestarraceclub about to go have some lagoon adventures. Winter just got a lot more fun! #fatbike #winterbike #borealisecho</small>
-                           </div>
-                           <img src="../lsphotos/image000779.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000782.jpg" title="Skokio drift #snow #mtb #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Skokio drift #snow #mtb #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000782.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000778.jpg" title="Snow biking through fresh powder is a great way to start your day. #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>Snow biking through fresh powder is a great way to start your day. #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000778.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000775.jpg" title="Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride. Frozen lagoons. There is no off season for bicycles, since getting a fatbike winter is rapidly becoming one of my favorite times to ride. #cycling #bicycle #fatbike #bikechi #45nrth #icebike #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000775.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
