--- a/instagram27.html
+++ b/instagram27.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000594.jpg" title="Stud. #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Stud. #lovestarfactoryteam #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000594.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000595.jpg" title="Crazy wind and heavy wet fog this morning with @ddave12000 & @theandyhudson #lovestarfactoryteam #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Crazy wind and heavy wet fog this morning with @ddave12000 & @theandyhudson #lovestarfactoryteam #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000595.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000138.jpg" title="Finished up a fun custom #lovestarbicyclebags SaddlePack tonight. #handmade #bicyclebag #bikepacking #cycling #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up a fun custom #lovestarbicyclebags SaddlePack tonight. #handmade #bicyclebag #bikepacking #cycling #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000138.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000596.jpg" title="Scenic Sunrise Solo #cycling #bicycle #moots #psychloX #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Scenic Sunrise Solo #cycling #bicycle #moots #psychloX #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000596.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000139.jpg" title="Ok, Elliot...I know you're in there somewhere!!! Go lovestarfactoryteam! #lovestarcyclingteam #lovestarbicyclebags #lovestar #cyclocrosschicago #barryroubaix #barryroubaix2016" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -207,58 +259,6 @@
                               <small>Gravel Train. #lovestarfactoryteam #cycling #cyclocross #gravelgrinder #dprt</small>
                            </div>
                            <img src="../lsphotos/image000607.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000608.jpg" title="Very muddy & windy ride with an awesome crew today. #lovestarfactoryteam #cycling #gravelgrinder #dprt" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Very muddy & windy ride with an awesome crew today. #lovestarfactoryteam #cycling #gravelgrinder #dprt</small>
-                           </div>
-                           <img src="../lsphotos/image000608.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000144.jpg" title="A nice #shoplocal kind of morning. #otherbrothercoffee #ponyshop #lovestarbicyclebags #shoplife #bikemechanic #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A nice #shoplocal kind of morning. #otherbrothercoffee #ponyshop #lovestarbicyclebags #shoplife #bikemechanic #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000144.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000145.jpg" title="Lots of heavy-duty blue Cordura on the interior...#lovestarbicyclebags #handmade #bikepacking #bikepackingbags #framebag #cycling #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lots of heavy-duty blue Cordura on the interior...#lovestarbicyclebags #handmade #bikepacking #bikepackingbags #framebag #cycling #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000145.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000146.jpg" title="Finished up a stealthy black custom frame at tonight. Just a hint of blue on the exterior. #lovestarbicyclebags #handmade #cycling #bicyclebag #bikepacking #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a stealthy black custom frame at tonight. Just a hint of blue on the exterior. #lovestarbicyclebags #handmade #cycling #bicyclebag #bikepacking #bikepackingbags #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000146.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
