--- a/instagram33.html
+++ b/instagram33.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000210.jpg" title="Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Christmas Eve adventures. #fatbike #clearybikes #lovestarbicyclebags #bikepackingbags #bikepacking #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000210.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000211.jpg" title="Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Sunset ride. #fatbike #cycling #lovestarbicyclebags #bikepackingbags #bikepacking #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000211.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000082.jpg" title="So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>So muddy. So fun. #hughjassfatbikeseries #fatbike #lovestarfactoryteam #lovestarbicyclebags #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000082.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000641.jpg" title="First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>First #fatbike race in the books. Thanks @wheelandsprocket for a great time! #lovestarfactoryteam #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000641.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000212.jpg" title="...and I thought #Cyclocross was weird. What did I get myself into? #fatbike #wheelandsprocket #lovestarbicyclebags #bikepackingbags #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>Racing his heart out to finish strong while the guys in the background are hot-tubbing it...must be cyclocross! Hahaha #cyclocross #cycling #cyclocrosschicago #lovestar #lovestarfactoryteam #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000219.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000649.jpg" title="Found a place with a bite size helping of gnar right next to my house. #fatbike #globalfatbikeday #bikechi #cycling #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Found a place with a bite size helping of gnar right next to my house. #fatbike #globalfatbikeday #bikechi #cycling #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000649.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000220.jpg" title="Happy Global Fatbike Day! Here's to shorts in December! #globalfatbikeday #lovestarbicyclebags #cycling #bikechi #ElNino is Spanish for #TheNino" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Happy Global Fatbike Day! Here's to shorts in December! #globalfatbikeday #lovestarbicyclebags #cycling #bikechi #ElNino is Spanish for #TheNino</small>
-                           </div>
-                           <img src="../lsphotos/image000220.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000221.jpg" title="Quick & early ride this morning with good friends. Fog & mist made for a chilly ride...but not to shabby considering it's almost a week into December. #lovestarfactoryteam #cycling #moots #cx #cyclocross #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Quick & early ride this morning with good friends. Fog & mist made for a chilly ride...but not to shabby considering it's almost a week into December. #lovestarfactoryteam #cycling #moots #cx #cyclocross #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000221.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000650.jpg" title="Happy Holidays from the #LovestarFactoryTeam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>theandyhudson</h4>
-                              <small>Happy Holidays from the #LovestarFactoryTeam</small>
-                           </div>
-                           <img src="../lsphotos/image000650.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
