--- a/instagram35.html
+++ b/instagram35.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000657.jpg" title="@elliotlovestarbicycles rocking in the single speed category. #ILRcx #lsb #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>@elliotlovestarbicycles rocking in the single speed category. #ILRcx #lsb #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000657.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000658.jpg" title="Tried my First single speed race today...feeling some n+1 vibes already. 🙄#ILRcx #cylist #cyclocross #cx #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Tried my First single speed race today...feeling some n+1 vibes already. 🙄#ILRcx #cylist #cyclocross #cx #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000658.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000659.jpg" title="@ddave12000 rocking his first Masters race today. #lovestarfactoryteam #cyclocross #cylist #cycling #cx #ILRcx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>@ddave12000 rocking his first Masters race today. #lovestarfactoryteam #cyclocross #cylist #cycling #cx #ILRcx</small>
+                           </div>
+                           <img src="../lsphotos/image000659.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000660.jpg" title="Tried my hand at the Master 35+ category today. These guys are good! Had a brutal first lap which included crashing at the barriers. #lovestarfactoryteam #lsb #IRLcx" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>Tried my hand at the Master 35+ category today. These guys are good! Had a brutal first lap which included crashing at the barriers. #lovestarfactoryteam #lsb #IRLcx</small>
+                           </div>
+                           <img src="../lsphotos/image000660.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000661.jpg" title="Sunrise team ride. #lovestarfactoryteam #cycling #bicycle #cylist" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>First medal : ) #lovestarfactoryteam #lovestarbicyclebags #cycling #youngestontheteam #firstrace #cyclocrosschicago</small>
                            </div>
                            <img src="../lsphotos/image000236.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000237.jpg" title="Pushing through on a tough course! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrossinthemidwest" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Pushing through on a tough course! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cycling #cyclocrossinthemidwest</small>
-                           </div>
-                           <img src="../lsphotos/image000237.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000238.jpg" title="Congratulations to Dave of Lovestar Factory Team for making it to the podium today! Tough race, great ride!! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cylcocrossinthemidwest" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>pattylouwho55</h4>
-                              <small>Congratulations to Dave of Lovestar Factory Team for making it to the podium today! Tough race, great ride!! #cyclocrosschicago #lovestarfactoryteam #lovestarbicyclebags #cylcocrossinthemidwest</small>
-                           </div>
-                           <img src="../lsphotos/image000238.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000671.jpg" title="Good times at the Rhythm and blues CX review in Evanston #lovestarfactoryteam #lsb photo credit to @theandyhudson" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Good times at the Rhythm and blues CX review in Evanston #lovestarfactoryteam #lsb photo credit to @theandyhudson</small>
-                           </div>
-                           <img src="../lsphotos/image000671.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000672.jpg" title="Managed my first podium finish today - in the rain and mud no less. Great times with #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ddave12000</h4>
-                              <small>Managed my first podium finish today - in the rain and mud no less. Great times with #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000672.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
