--- a/instagram4.html
+++ b/instagram4.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001040.jpg" title="Tactical elegance. Stripped off most of the decals and stickers. Let the craftsmanship speak for itself, understated yet still catching to the discerning eye. I'm Almost done dialing my #cyclocross steed for this season. I am going to be racing a very abridged calendar this fall as I prepare for the #Tuscobia80 and as our family settles into the craziness of our first year of school for the girls. Here's to another great #chicrosscup season! #moots" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Tactical elegance. Stripped off most of the decals and stickers. Let the craftsmanship speak for itself, understated yet still catching to the discerning eye. I'm Almost done dialing my #cyclocross steed for this season. I am going to be racing a very abridged calendar this fall as I prepare for the #Tuscobia80 and as our family settles into the craziness of our first year of school for the girls. Here's to another great #chicrosscup season! #moots</small>
+                           </div>
+                           <img src="../lsphotos/image001040.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001037.jpg" title="First #chicagocrosscup 2017 races are in the books! What a great day - did my best to put a hurt on my competition out there...#lovestarraceclub #caldwellwoods" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>First #chicagocrosscup 2017 races are in the books! What a great day - did my best to put a hurt on my competition out there...#lovestarraceclub #caldwellwoods</small>
+                           </div>
+                           <img src="../lsphotos/image001037.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001038.jpg" title="Strategizing his lines for the cross race #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Strategizing his lines for the cross race #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image001038.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001036.jpg" title="Fat tire gravel grinding this AM. #fatbike 📷 @mrchanzalez" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat tire gravel grinding this AM. #fatbike 📷 @mrchanzalez</small>
+                           </div>
+                           <img src="../lsphotos/image001036.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001035.jpg" title="Loungin' around the park... .
 
 #cyclocross #crosspractice #cxiscoming #cxishere #lovestarraceclub" rel="lightbox" class="fancybox">
@@ -219,58 +271,6 @@ Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybik
 Concentration. #cycling #bicycle #bikemechanic #mechaniclife #parktool #abbeybiketools #hirobel #lovestarbicyclebags #clearybikes</small>
                            </div>
                            <img src="../lsphotos/image001020.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001019.jpg" title="Fat tire sunrise ride on the DPRT this morning #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat tire sunrise ride on the DPRT this morning #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image001019.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001018.jpg" title="The friendliest runners and pedestrians on the #DPRT oh and #lovestarraceclub #crossiscoming" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>The friendliest runners and pedestrians on the #DPRT oh and #lovestarraceclub #crossiscoming</small>
-                           </div>
-                           <img src="../lsphotos/image001018.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001016.jpg" title="Daddy / Daughter date complete with matching moustaches #dadlife" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Daddy / Daughter date complete with matching moustaches #dadlife</small>
-                           </div>
-                           <img src="../lsphotos/image001016.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image001017.jpg" title="To much rain for mountain bikes this morning. Consoling myself with road miles and @otherbrothercoffee latte goodness. ☕️🦆 ❤️ ⭐️🚲" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>To much rain for mountain bikes this morning. Consoling myself with road miles and @otherbrothercoffee latte goodness. ☕️🦆 ❤️ ⭐️🚲</small>
-                           </div>
-                           <img src="../lsphotos/image001017.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
