--- a/instagram43.html
+++ b/instagram43.html
@@ -6,6 +6,62 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000306.jpg" title="Sometimes you just *have* to ride, even in the pouring rain. Like &quot;Dad&quot; says, &quot;character building&quot; #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>agonz21</h4>
+                              <small>Sometimes you just *have* to ride, even in the pouring rain. Like "Dad" says, "character building" #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000306.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000739.jpg" title="Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Rainy team ride this morning. #cycling #bicycle #Chicago #moots #rainride #bikechi #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000739.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000307.jpg" title="Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Came home to a big fabric delivery! #lovestarbicyclebags #cycling #bikepacking #bicyclebag #bicycle #handmade #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000307.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000740.jpg" title="#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>fatbikee</h4>
+                              <small>#Repost @elliotlovestarbicycles with @repostapp.
+・・・
+#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000740.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000741.jpg" title="#fatbikefriday spring flowers commute, complete with showers. #cycling #bicycle #fatbike #bikechi #cyclist #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +263,6 @@
                               <small>#LoveStarFactoryTeam @ddave12000</small>
                            </div>
                            <img src="../lsphotos/image000749.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000750.jpg" title="Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Gritty and wet today. Shoe/Sock game was strong, albeit dirty. #cycling #bicycle #bikechi #lovestarfactoryteam #nobadweather</small>
-                           </div>
-                           <img src="../lsphotos/image000750.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000751.jpg" title="Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Fat bike Friday! First commute on this monster. Kind of in love. #fatbike #bicycle #cycling #bikechi #lovestarfactoryteam #fatbikefriday #motobecane</small>
-                           </div>
-                           <img src="../lsphotos/image000751.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000315.jpg" title="Brainstorming begins... #fatbike #bikepacking #framebag #lovestarbicyclebags #cycling #bikechi #bicycle #adventurebike" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Brainstorming begins... #fatbike #bikepacking #framebag #lovestarbicyclebags #cycling #bikechi #bicycle #adventurebike</small>
-                           </div>
-                           <img src="../lsphotos/image000315.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000316.jpg" title="Repost from @theandyhudson . Amazing crew out for a night ride with the #lovestarfactoryteam . Some excellent miles on quiet roads with awesome people ending with some fine brews. Look for some of these killers out at the Chicago cross cup series this fall! #lovestarbicyclebags #cycling #cyclocross #nightride #bicycle #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Repost from @theandyhudson . Amazing crew out for a night ride with the #lovestarfactoryteam . Some excellent miles on quiet roads with awesome people ending with some fine brews. Look for some of these killers out at the Chicago cross cup series this fall! #lovestarbicyclebags #cycling #cyclocross #nightride #bicycle #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000316.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
