--- a/instagram45.html
+++ b/instagram45.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000330.jpg" title="Searching through cross race photos from this past year. Came across this gem from #snowymountainphotography check him out! #lovestarbicyclebags #cyclocross #cx #barriers #moots #championsystem #bikechi #cycling #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Searching through cross race photos from this past year. Came across this gem from #snowymountainphotography check him out! #lovestarbicyclebags #cyclocross #cx #barriers #moots #championsystem #bikechi #cycling #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000330.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000331.jpg" title="Morning commute made me thankful for a high BB and waterproof bags. #lovestarbicyclebags #northbranchtrail #bikechi #moots #adventurebike #cycling #cyclocross #cx #bikecommute" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Morning commute made me thankful for a high BB and waterproof bags. #lovestarbicyclebags #northbranchtrail #bikechi #moots #adventurebike #cycling #cyclocross #cx #bikecommute</small>
+                           </div>
+                           <img src="../lsphotos/image000331.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000332.jpg" title="A pair of #lovestarbicyclebags on their matching bikes. #handmade #custom #bicyclebag #cycling #cyclocross #cx #bikechi #cannondale #seatbag #bikepacking" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>A pair of #lovestarbicyclebags on their matching bikes. #handmade #custom #bicyclebag #cycling #cyclocross #cx #bikechi #cannondale #seatbag #bikepacking</small>
+                           </div>
+                           <img src="../lsphotos/image000332.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000333.jpg" title="Finished up the sister #lovestarbicyclebags SaddlePack to yesterday's post. Two bags two bikes one lucky customer. #handmade #cycling #bicycle #bikechi #cycling #bikepacking #bicyclebag" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Finished up the sister #lovestarbicyclebags SaddlePack to yesterday's post. Two bags two bikes one lucky customer. #handmade #cycling #bicycle #bikechi #cycling #bikepacking #bicyclebag</small>
+                           </div>
+                           <img src="../lsphotos/image000333.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000755.jpg" title="Cemetery ride! #lovestarfactoryteam" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>oliviabeaty</h4>
@@ -207,58 +259,6 @@
                               <small>Night ride gathering. #lovestarbicyclebags #cycling #nightride #neverabadTimetoRide #bicycle #bikechi</small>
                            </div>
                            <img src="../lsphotos/image000347.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000348.jpg" title="Lovestar Factory Team riders out putting in some night miles. #cycling #bikechi #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team riders out putting in some night miles. #cycling #bikechi #bicycle #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000348.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000349.jpg" title="Solo Sunday ride. In the #Chicago area, hill repeats means riding up an down the ravines towards #LakeMichigan beautiful spring day. #moots #cycling #bicycle #training #lovestarbicyclebags #SundaySolo #cx #cyclocross" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Solo Sunday ride. In the #Chicago area, hill repeats means riding up an down the ravines towards #LakeMichigan beautiful spring day. #moots #cycling #bicycle #training #lovestarbicyclebags #SundaySolo #cx #cyclocross</small>
-                           </div>
-                           <img src="../lsphotos/image000349.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000350.jpg" title="Lovestar Factory Team was out this morning fighting some epic coffee shop sprint battles. #cycling #bikehi #lovestarbicyclebags #championsystem #bikestyle #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team was out this morning fighting some epic coffee shop sprint battles. #cycling #bikehi #lovestarbicyclebags #championsystem #bikestyle #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000350.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000351.jpg" title="It's always awesome when you're out for a ride and you run across a teammate! Good ride today @theandyhudson you were killin' it! #lovestarbicyclebags #bikechi #cycling #bicycle #championsystem #teamride" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It's always awesome when you're out for a ride and you run across a teammate! Good ride today @theandyhudson you were killin' it! #lovestarbicyclebags #bikechi #cycling #bicycle #championsystem #teamride</small>
-                           </div>
-                           <img src="../lsphotos/image000351.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
