--- a/instagram46.html
+++ b/instagram46.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000348.jpg" title="Lovestar Factory Team riders out putting in some night miles. #cycling #bikechi #bicycle #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team riders out putting in some night miles. #cycling #bikechi #bicycle #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000348.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000349.jpg" title="Solo Sunday ride. In the #Chicago area, hill repeats means riding up an down the ravines towards #LakeMichigan beautiful spring day. #moots #cycling #bicycle #training #lovestarbicyclebags #SundaySolo #cx #cyclocross" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Solo Sunday ride. In the #Chicago area, hill repeats means riding up an down the ravines towards #LakeMichigan beautiful spring day. #moots #cycling #bicycle #training #lovestarbicyclebags #SundaySolo #cx #cyclocross</small>
+                           </div>
+                           <img src="../lsphotos/image000349.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000350.jpg" title="Lovestar Factory Team was out this morning fighting some epic coffee shop sprint battles. #cycling #bikehi #lovestarbicyclebags #championsystem #bikestyle #bicycle" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lovestar Factory Team was out this morning fighting some epic coffee shop sprint battles. #cycling #bikehi #lovestarbicyclebags #championsystem #bikestyle #bicycle</small>
+                           </div>
+                           <img src="../lsphotos/image000350.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000351.jpg" title="It's always awesome when you're out for a ride and you run across a teammate! Good ride today @theandyhudson you were killin' it! #lovestarbicyclebags #bikechi #cycling #bicycle #championsystem #teamride" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>It's always awesome when you're out for a ride and you run across a teammate! Good ride today @theandyhudson you were killin' it! #lovestarbicyclebags #bikechi #cycling #bicycle #championsystem #teamride</small>
+                           </div>
+                           <img src="../lsphotos/image000351.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000352.jpg" title="Stealthy Black Lovestar Saddlepack with blaze orange interior. #lovestarbicyclebags #handmade #SewRad #cycling #bikebacking #bikechi #bicycle #bicyclebag" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,58 +259,6 @@
                               <small>New fork for the #Moots. #ritchey CX Carbon disc fork really spices up the front end of this bike. Thanks @velosmith for the install and cutting work. One step closer to this year's Barry Roubaix #cyclocross #gravel #gravelgrinder #titanium #bikechi #bicycle #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000367.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000368.jpg" title="Re-gram o a customer's custom framebag. Lots of cargo space and kept the black/lime color way going strong #custom #lovestarbicyclebags #madeinteUSA #handmade #cycling #bicycle #bicyclebag #bikepacking #framebag" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Re-gram o a customer's custom framebag. Lots of cargo space and kept the black/lime color way going strong #custom #lovestarbicyclebags #madeinteUSA #handmade #cycling #bicycle #bicyclebag #bikepacking #framebag</small>
-                           </div>
-                           <img src="../lsphotos/image000368.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000369.jpg" title="January edition of the Century of the Month Club! Riding one 100+ mile ride every month for 2015. #cycling #bicycle #bikewinter #century #centuryride #moots #lovestarbicyclebags #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>January edition of the Century of the Month Club! Riding one 100+ mile ride every month for 2015. #cycling #bicycle #bikewinter #century #centuryride #moots #lovestarbicyclebags #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000369.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000370.jpg" title="Team colors. #lovestarbicyclebags #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Team colors. #lovestarbicyclebags #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000370.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000371.jpg" title="Snow means fatbikes & fatbikes means framebags! #lovestarbicyclebags #handmade #fatbike #bikepacking #cycling #wintercycling #SewRad #bikechi" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Snow means fatbikes & fatbikes means framebags! #lovestarbicyclebags #handmade #fatbike #bikepacking #cycling #wintercycling #SewRad #bikechi</small>
-                           </div>
-                           <img src="../lsphotos/image000371.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
