--- a/instagram5.html
+++ b/instagram5.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001019.jpg" title="Fat tire sunrise ride on the DPRT this morning #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Fat tire sunrise ride on the DPRT this morning #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image001019.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001018.jpg" title="The friendliest runners and pedestrians on the #DPRT oh and #lovestarraceclub #crossiscoming" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>oliviabeaty</h4>
+                              <small>The friendliest runners and pedestrians on the #DPRT oh and #lovestarraceclub #crossiscoming</small>
+                           </div>
+                           <img src="../lsphotos/image001018.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001016.jpg" title="Daddy / Daughter date complete with matching moustaches #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Daddy / Daughter date complete with matching moustaches #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image001016.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image001017.jpg" title="To much rain for mountain bikes this morning. Consoling myself with road miles and @otherbrothercoffee latte goodness. ☕️🦆 ❤️ ⭐️🚲" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>To much rain for mountain bikes this morning. Consoling myself with road miles and @otherbrothercoffee latte goodness. ☕️🦆 ❤️ ⭐️🚲</small>
+                           </div>
+                           <img src="../lsphotos/image001017.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image001014.jpg" title="Caution - Do Not Dig. Buried in this area is radioactive material from nuclear research conducted here 1943-1949. Burial Area is marked by six corner markers 100 ft from this center point. There is no danger to visitors... #bikeglow" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -207,62 +259,6 @@
                               <small>New sock day. #sockdoping #lovestarraceclub #madalchemy</small>
                            </div>
                            <img src="../lsphotos/image001003.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000999.jpg" title="This post was reposted using @the.instasave.app  #theinstasaveapp
-・・・
-&quot;#babyARC putting in some hard work trying to figure out this pedaling thing. #clearybikes #lilshredder #bikechi #cycling #bicycle #kidsonbikes #adventuredad #lovestarraceclub&quot;" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>ojurado58</h4>
-                              <small>This post was reposted using @the.instasave.app  #theinstasaveapp
-・・・
-"#babyARC putting in some hard work trying to figure out this pedaling thing. #clearybikes #lilshredder #bikechi #cycling #bicycle #kidsonbikes #adventuredad #lovestarraceclub"</small>
-                           </div>
-                           <img src="../lsphotos/image000999.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000998.jpg" title="#babyARC putting in some hard work trying to figure out this pedaling thing. #clearybikes #lilshredder #bikechi #cycling #bicycle #kidsonbikes #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>#babyARC putting in some hard work trying to figure out this pedaling thing. #clearybikes #lilshredder #bikechi #cycling #bicycle #kidsonbikes #adventuredad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000998.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000997.jpg" title="Early to bed early to shred. #cycling #coffeeride #bicycle #ridecannondale #bikechi #roadie #bikesandbeards #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Early to bed early to shred. #cycling #coffeeride #bicycle #ridecannondale #bikechi #roadie #bikesandbeards #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000997.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000996.jpg" title="I love trying new things 😱🚲 #ridecannondale #cycling #bicycle #srametap #bikechi #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>I love trying new things 😱🚲 #ridecannondale #cycling #bicycle #srametap #bikechi #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000996.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
