--- a/instagram51.html
+++ b/instagram51.html
@@ -6,6 +6,58 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000448.jpg" title="Got my new saddle bag for my ride. Shout out Lovestar Bicycle Bags. #saddlebag #LovestarBicycleBags #elliotlovestarbicycles #salsaVaya2 #PimpMyRide" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>aleaders</h4>
+                              <small>Got my new saddle bag for my ride. Shout out Lovestar Bicycle Bags. #saddlebag #LovestarBicycleBags #elliotlovestarbicycles #salsaVaya2 #PimpMyRide</small>
+                           </div>
+                           <img src="../lsphotos/image000448.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000449.jpg" title="Homemade barriers. Time to start practicin' #cx2014 #cx #cyclocross #cycling #crossishere #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Homemade barriers. Time to start practicin' #cx2014 #cx #cyclocross #cycling #crossishere #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000449.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000450.jpg" title="Lovestar Factory Team racing Chicago today. Loved the new pit crew! #cyclocross #cycling  #chicagocycling #lovestarfactoryteam #lovestarbicyclebags #elliotlovestar #bikechi #bikeracing" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Lovestar Factory Team racing Chicago today. Loved the new pit crew! #cyclocross #cycling  #chicagocycling #lovestarfactoryteam #lovestarbicyclebags #elliotlovestar #bikechi #bikeracing</small>
+                           </div>
+                           <img src="../lsphotos/image000450.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000451.jpg" title="Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Re-gram from @pattylouwho55 Lovestar Factory Team kicking it at Relay CX today. #cyclocross #cycling #bikechi #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000451.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000757.jpg" title="Beautiful day for a race! #lovestarfactoryteam #cycling #bikeracing #chicagocycling #racechicago #elliotlovestar" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -207,58 +259,6 @@
                               <small>My personal Lovestar Saddle Pack ride kit. #cycling #bikechi #bicycle #lovestarbicyclebags #fixitsticks @fixitsticks #essentials</small>
                            </div>
                            <img src="../lsphotos/image000466.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000467.jpg" title="First real ride in about a week. Legs felt alright, still was hacking with some lingering rasping in my lungs, but I think I'm over the hump with this illness. Lots of nice trails today, and happened upon a criterium mid-ride! #recoveryride #backinthesaddleagain #cycling #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>First real ride in about a week. Legs felt alright, still was hacking with some lingering rasping in my lungs, but I think I'm over the hump with this illness. Lots of nice trails today, and happened upon a criterium mid-ride! #recoveryride #backinthesaddleagain #cycling #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000467.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000468.jpg" title="A batch of Lovestar Factory Team saddle packs. two interior color options...both of them rad. #cycling #bikechi #bicycle #lovestarbicyclebags #handmade #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A batch of Lovestar Factory Team saddle packs. two interior color options...both of them rad. #cycling #bikechi #bicycle #lovestarbicyclebags #handmade #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000468.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000469.jpg" title="Finished up this official Lovestar Factory Team saddle pack this morning. Really pleased with how it turned out. #handmade #cycling #bikechi #bicyclebag #bikepacking #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up this official Lovestar Factory Team saddle pack this morning. Really pleased with how it turned out. #handmade #cycling #bikechi #bicyclebag #bikepacking #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000469.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000470.jpg" title="Next level cycling style...matching your saddle pack to your team kit.  #nextlevel #cycling #lovestarbicyclebags #bikechi #handmade #bikepacking" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Next level cycling style...matching your saddle pack to your team kit.  #nextlevel #cycling #lovestarbicyclebags #bikechi #handmade #bikepacking</small>
-                           </div>
-                           <img src="../lsphotos/image000470.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
